# techcrunch-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/techcrunch_py/: __init__.py  client.py  scraper.py
src/techcrunch_py/models/: latest_article.py
src/techcrunch_py/schemas/: latest_article_schema.py
src/techcrunch_py/selectors/: article_selectors.py  home_selectors.py  primitives.py
tests/: test_data.py  test_scrape.py  test_scraper_get_latest_headlines.py
