[project]
name = "techcrunch-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "caloyevasco", email = "antugaevasco@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
